objects/PPT_Usage_Metric__c.object
<CustomObject>
    <description>PPT Export usage metrics</description>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <description>Partner Account Id</description>
        <inlineHelpText>Partner Account Id</inlineHelpText>
        <label>PartnerAccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <description>JBP or ABP</description>
        <inlineHelpText>JBP or ABP</inlineHelpText>
        <label>PlanType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCountryName__c</fullName>
        <description>User Country Name</description>
        <inlineHelpText>User Country Name</inlineHelpText>
        <label>UserCountryName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmailId__c</fullName>
        <description>User Email Address</description>
        <inlineHelpText>User Email Address</inlineHelpText>
        <label>UserEmailId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserExportCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>User Export Count</description>
        <inlineHelpText>User Export Count</inlineHelpText>
        <label>UserExportCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserFirstName__c</fullName>
        <description>User First Name</description>
        <inlineHelpText>User First Name</inlineHelpText>
        <label>UserFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLastExportDate__c</fullName>
        <description>PPT Last Exported Date and Time</description>
        <inlineHelpText>PPT Last Exported Date and Time</inlineHelpText>
        <label>UserLastExportDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserLastName__c</fullName>
        <description>User Last Name</description>
        <inlineHelpText>User Last Name</inlineHelpText>
        <label>UserLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>UserType for differentiating Internal or External User</description>
        <inlineHelpText>Internal or External User</inlineHelpText>
        <label>UserType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PPT Usage Metric</label>
    <listViews>
        <fullName>ALL_Fields</fullName>
        <columns>NAME</columns>
        <columns>PartnerAccountId__c</columns>
        <columns>PlanType__c</columns>
        <columns>UserCountryName__c</columns>
        <columns>UserEmailId__c</columns>
        <columns>UserExportCount__c</columns>
        <columns>UserFirstName__c</columns>
        <columns>UserLastExportDate__c</columns>
        <columns>UserLastName__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>PartnerAccountId__c</columns>
        <columns>UserFirstName__c</columns>
        <columns>UserLastName__c</columns>
        <columns>UserEmailId__c</columns>
        <columns>UserCountryName__c</columns>
        <columns>PlanType__c</columns>
        <columns>UserType__c</columns>
        <columns>UserLastExportDate__c</columns>
        <columns>UserExportCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPT Usage Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>